Update: new rules from bilibili user 今天潜行用箱子了吗.
original comment:
这个工具好！
顺便评论区放之前群里看到的大家来猜是什么
ゐ イ+ ノム キT チξ
Яll キT チギ
iコ タ卜 シマ

credit: bilibili user 今天潜行用箱子了吗.

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@ html, body {
 
     /* fonts */
     color: white;
-    font-family: "Splatoon2", monospace;
+    font-family: "Splatoon2", "DFPZongYiW7-GB", monospace;
     font-size: min(5.0vw, 50px);
     text-align: center;
 
