--- a/css/style.css
+++ b/css/style.css
@@ -34,7 +34,7 @@ html, body {
     position: relative;
 
     /* mask */
-    /* overflow: hidden; */
+    overflow: hidden;
     border-radius: 5px;
     background-color: gray;
 
