--- a/css/style.css
+++ b/css/style.css
@@ -268,6 +268,14 @@ ul.popup-list li:active {
     box-shadow: 0 0 10px 5px lightgoldenrodyellow;
 }
 
+.popup-button-wide {
+    display: block;
+    width: 80%;
+    margin: auto;
+    margin-top: 10px;
+    margin-bottom: 10px;
+}
+
 .button-popuped {
     background-color: darkblue;
     color: ghostwhite;
